# PhishScanner

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.github/: dependabot.yml
backend/: .coverage  .env  .env.example  Dockerfile  config.py  conftest.py  main.py  pyproject.toml  requirements.txt  ruff.toml  threat_cache.db
backend/api/: routes.py
backend/models/: osint_models.py
backend/services/: ai_service.py  image_phishing_service.py  osint_service.py  utils.py  virustotal_service.py
backend/services/scanners/: form_scanner.py  geo_scanner.py  heuristic_scanner.py  ssl_scanner.py  tech_scanner.py  typosquatting_scanner.py  url_structure_analyzer.py  whois_scanner.py
backend/tests/: test_geoscanner.py  test_main.py  test_security.py
backend/utils/: cache_service.py  openai_client.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/ui/: ErrorBoundary.tsx  ServerStatus.tsx
frontend/src/features/analyzer/components/: AnalyzeForm.tsx  ResultsPanel.tsx  ScannerLoader.tsx
frontend/src/features/analyzer/components/ResultsComponents/cards/: AntivirusGrid.tsx  HeuristicReportCard.tsx  HeuristicRiskCard.tsx  PrivacyNutritionLabel.tsx  SecureCaptureCard.tsx  TechStackCard.tsx  UrlAnatomyCard.tsx  UrlMetadataCard.tsx
frontend/src/features/analyzer/components/ResultsComponents/tabs/: ImagePhishingPanel.tsx  SummaryTab.tsx  TechnicalTab.tsx
frontend/src/features/analyzer/components/ResultsComponents/ui/: AiChatPanel.tsx  ScriptModal.tsx  SecurityVerdict.tsx  SeverityBanner.tsx
frontend/src/features/history/components/: HistoryPanel.tsx
frontend/src/features/threat-map/components/: ThreatMap.tsx
frontend/src/hooks/: useAiChat.ts  useScriptAnalyzer.ts
frontend/src/lib/: validations.ts
frontend/src/store/: useThreatStore.ts
frontend/src/types/: index.ts  osint.ts
